--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <div id="media-player">
         <div id="embed-iframe"></div>
     </div>
+    <div class="more">
+        More episodes can be found on <a href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1" target="_blank">Spotify</a> or <a href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924" target="_blank">Apple Podcasts</a> !
+    </div>
   <div class="links">
       <a href="#" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
