--- a/index.html
+++ b/index.html
@@ -13,51 +13,59 @@
     
 </head>
 <body> 
-    <div class="hero">
-        <img src="erictest.jpg" alt="">
-        <div class="title">The Vibing With Sleezy Podcast</div>
-    </div>
-    <div class="text">
-        <div class="glass">
-            <div class="about">
-                Vibing With Sleezy: The Podcast is a podcast by Eric Clark aka Sleezy E. The podcast is based out of Louisville, Kentucky. The podcast has a wide range of guests and wide range of content. 
-            </div>
+    <div class="heroContainer">
+        <div class="hero">
+            <img src="erictest.jpg" alt="">
+            <div class="title">The Vibing With Sleezy Podcast</div>
         </div>
     </div>
-    <ul id="episodes">
-        <li>
-          <button data-spotify-id="spotify:episode:10tt2L4Yh59dsbBL3qOooO?si=9cbfcfa2435f463e&nd=1">
-            Antonio Pantoja Part 1
-          </button>
-        </li>
-        <li>
-          <button data-spotify-id="spotify:episode:3EIFJtF5RU9gjo1XztOKZK?si=108939b2ae6d4353">
-            Antonio Pantoja Part 2
-          </button>
-        </li>
-        <li>
-          <button data-spotify-id="spotify:episode:1R4OhUyoQ2TSblKGj86jDk?si=839c63bc71c74d9b">
-            Official World Cup Part 1
-          </button>
-        </li>
-        <li>
-            <button data-spotify-id="spotify:episode:5kbp7YMluwCoC1wz64chCy?si=c30741d93bd64a39">
-              Official World Cup Part 2
-            </button>
-          </li>
-      </ul>
-    <div id="media-player">
-        <div id="embed-iframe"></div>
+    <div class="infoContainer">
+        <div class="text">
+            <div class="glass">
+                <div class="about">
+                    Vibing With Sleezy: The Podcast is a podcast by Eric Clark aka Sleezy E. The podcast is based out of Louisville, Kentucky. The podcast has a wide range of guests and wide range of content. 
+                </div>
+            </div>
+        </div>
+        <div class="mediaContainer">
+            <ul id="episodes">
+                <li>
+                  <button data-spotify-id="spotify:episode:10tt2L4Yh59dsbBL3qOooO?si=9cbfcfa2435f463e&nd=1">
+                    Antonio Pantoja Part 1
+                  </button>
+                </li>
+                <li>
+                  <button data-spotify-id="spotify:episode:3EIFJtF5RU9gjo1XztOKZK?si=108939b2ae6d4353">
+                    Antonio Pantoja Part 2
+                  </button>
+                </li>
+                <li>
+                  <button data-spotify-id="spotify:episode:1R4OhUyoQ2TSblKGj86jDk?si=839c63bc71c74d9b">
+                    Official World Cup Part 1
+                  </button>
+                </li>
+                <li>
+                    <button data-spotify-id="spotify:episode:5kbp7YMluwCoC1wz64chCy?si=c30741d93bd64a39">
+                      Official World Cup Part 2
+                    </button>
+                  </li>
+              </ul>
+            <div id="media-player">
+                <div id="embed-iframe"></div>
+            </div>
+        </div>
+        <div class="moreContainer">
+            <div class="more">
+                More episodes can be found on <a href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1" target="_blank">Spotify</a> or <a href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924" target="_blank">Apple Podcasts</a> !
+            </div>
+        </div>
+      <div class="links">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com/vibingwithsleezythepodcast/" target="_blank" class="fa fa-instagram"></a>
+    
+      </div>
     </div>
-    <div class="more">
-        More episodes can be found on <a href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1" target="_blank">Spotify</a> or <a href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924" target="_blank">Apple Podcasts</a> !
-    </div>
-  <div class="links">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="https://www.instagram.com/vibingwithsleezythepodcast/" target="_blank" class="fa fa-instagram"></a>
-
-  </div>
     <script src="scripts.js"></script>
     <script src="https://open.spotify.com/embed-podcast/iframe-api/v1" async></script>
 </body>
