--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="text">
             <div class="glass">
                 <div class="about">
-                    Vibing With Sleezy: The Podcast is a podcast by Eric Clark aka Sleezy E. The podcast is based out of Louisville, Kentucky. The podcast has a wide range of guests and wide range of content. 
+                    Welcome to "Vibing With Sleezy: The Podcast," hosted by the one and only Eric Clark aka Sleezy E. Based out of Louisville, Kentucky, this podcast brings you a wide range of guests and an even wider range of content. From funny and provocative to chill and laid-back, "Vibing With Sleezy" has something for everyone.<br><br>
+
+Tune in to hear from a mix of local and international guests as they join Sleezy E for candid and engaging conversations. With a diverse array of topics covered, there's always something new and interesting to discover on "Vibing With Sleezy." So why wait? Join the vibe today and never miss an episode of this must-listen podcast.
                 </div>
             </div>
         </div>
@@ -58,12 +60,11 @@
             <div class="more">
                 More episodes can be found on <a href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1" target="_blank">Spotify</a> or <a href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924" target="_blank">Apple Podcasts</a> !
             </div>
-        </div>
-      <div class="links">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com/vibingwithsleezythepodcast/" target="_blank" class="fa fa-instagram"></a>
-    
+            <div class="links">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="https://www.instagram.com/vibingwithsleezythepodcast/" target="_blank" class="fa fa-instagram"></a>
+            </div>
       </div>
     </div>
     <script src="scripts.js"></script>
