--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
 <body> 
     <header>
         <nav class="navbar">
-            <a href="#" class="nav-branding">SLEEZY E</a>
+            <a href="/index.html" class="nav-branding">SLEEZY E</a>
 
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Listen</a>
+                    <a href="/listen.html" class="nav-link">Listen</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Sleezy's Worldwide</a>
+                    <a href="/worldwide.html" class="nav-link">Sleezy's Worldwide</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Guests</a>
+                    <a href="guests.html" class="nav-link">Guests</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Guestbook</a>
+                    <a href="/guestbook.html" class="nav-link">Guestbook</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Merch/Donate</a>
+                    <a href="/donate.html" class="nav-link">Merch/Donate</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -95,8 +95,7 @@
                     </div>
                 </div>
               <div class="links">
-                  <a href="#" class="fa fa-facebook"></a>
-                  <a href="#" class="fa fa-twitter"></a>
+                  <a href="https://www.facebook.com/vibingwithsleezy/" target="_blank" class="fa fa-facebook"></a>
                   <a href="https://www.instagram.com/vibingwithsleezythepodcast/" target="_blank" class="fa fa-instagram"></a>
             
               </div>
