--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,7 @@
                 <div class="glass">
                     <div class="about">
                 <div class="Eric">You can contact me on the following platforms:</div>
+                <div class="links2Container">
                 <div class="links2">
                 <ul>
                 <li>
@@ -77,6 +78,7 @@
                 </li>
             </div>
                 </ul>
+            </div>
                 </div>
                 </div>
             </div>
