--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,13 @@
                 </ul>
             </div>
                 </div>
-                </div>
+            </div>
+        </div>
+        <div class="copy">
+            <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
             </div>
             </div>
+              
     <script src="scripts.js"></script>
 </body>
 </html>
