--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             
               </div>
             </div>
+            <div class="copy">
+                <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+                </div>
         </div>
         </div>
     <script src="scripts.js"></script>
