--- a/contact.html
+++ b/contact.html
@@ -46,14 +46,11 @@
         </nav>
     </header>
     <div class="body2">
-        <div class="heroContainer">
-            <div class="hero">
-                <img src="erictest.jpg" alt="">
-                <div class="title">The Vibing With Sleezy Podcast</div>
-            </div>
+        <div class="hero">
+            <img src="erictest.jpg" alt="">
+            <div class="title">The Vibing With Sleezy Podcast</div>
         </div>
-        <div class="contactContainer">
-            <div class="contacts">
+        <div class="body3">
                 <div class="glass">
                     <div class="about">
                 <div class="Eric">You can contact me on the following platforms:</div>
@@ -78,14 +75,23 @@
                 </li>
             </div>
                 </ul>
-            </div>
-                </div>
-            </div>
-        </div>
-        <div class="copy">
-            <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
-            </div>
-            </div>
+    </div>
+</div>
+</div>
+</div>
+<div class="formContainer">
+    <form>
+        <h3>Want To Be On The Show?</h3>
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="email" id="email" placeholder="E-mail" required>
+        <textarea id="message" rows="4" placeholder="What makes you unique?"></textarea>
+        <button type="submit">Send</button>
+    </form>
+    </div>
+    </div>
+<div class="copy">
+    <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+    </div>
               
     <script src="scripts.js"></script>
 </body>
