--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
     
 </head>
 <body> 
-    <header>
+    <div class="container">
+    <div class="header">
         <nav class="navbar">
             <a href="/index.html" class="nav-branding">SLEEZY E</a>
 
@@ -44,7 +45,7 @@
                 <span class="bar"></span>
             </div>
         </nav>
-    </header>
+    </div>
     <div class="body2">
         <div class="hero">
             <img src="erictest.jpg" alt="">
@@ -91,6 +92,7 @@
     </div>
 <div class="copy">
     <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+    </div>
     </div>
     <script src="https://smtpjs.com/v3/smtp.js"></script>          
     <script src="scripts.js"></script>
