--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     
 </head>
 <body> 
-    <header>
+    <div class="container">
+    <div class="header">
         <nav class="navbar">
             <a href="/index.html" class="nav-branding">SLEEZY E</a>
 
@@ -43,7 +44,7 @@
                 <span class="bar"></span>
             </div>
         </nav>
-    </header>
+    </div>
     <div class="body2">
         <div class="heroContainer">
             <div class="hero">
@@ -104,7 +105,8 @@
                 <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
                 </div>
         </div>
-        </div>
+    </div>
+    </div>
     <script src="scripts.js"></script>
     <script src="https://open.spotify.com/embed-podcast/iframe-api/v1" async></script>
 </body>
