--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <div class="copy">
                 <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
                 </div>
+                <div class="bumper">
+                </div>
         </div>
     </div>
     </div>
