--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     <div class="body2">
         <div class="heroContainer">
             <div class="hero">
-                <img src="erictest.jpg" alt="">
-                <div class="title">The Vibing With Sleezy Podcast</div>
+                <img src="Logo.png" alt="Vibing With Sleezy Logo">
             </div>
         </div>
         <div class="text-body">
