--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
             </div>
         </nav>
     </div>
-   
+    <div class="body4">
         <img class="ericStand" src="ericstand.png">
-        <img class="ericStand2" src="ericstand.png">
+        
         <div class="body3">
                 <div class="glass">
                     <div class="about">
@@ -81,8 +81,8 @@
 <div class="formContainer">
     <div class="want">Want to be on the show?</div>
     <form action="https://formsubmit.co/ajthms@yahoo.com" method="POST">
-        <input type="text" name="name" required>
-        <input type="email" name="email" required>
+        <input type="text" name="name" placeholder="Name" required>
+        <input type="email" name="email" placeholder="Email" required>
         <input type="text" name="message" placeholder="What makes you unique?" required>
         <input type="hidden" name="_subject" value="New Vibing With Sleezy submission!">
         <input type="hidden" name="_captcha" value="false">
@@ -90,11 +90,13 @@
         <button type="submit">Send</button>
    </form>
     </div>
+    <div class="copy">
+        <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+        </div>
     </div>
-<div class="copy">
-    <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+    <img class="ericStand2" src="ericstand.png">
     </div>
-    </div>
+
     <script src="https://smtpjs.com/v3/smtp.js"></script>          
     <script src="scripts.js"></script>
 </body>
