--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
                     <a href="/listen.html" class="nav-link">Listen</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/worldwide.html" class="nav-link">Sleezy's Worldwide</a>
-                </li>
-                <li class="nav-item">
-                    <a href="guests.html" class="nav-link">Guests</a>
+                    <a href="/worldwide.html" class="nav-link">World of Sleezy</a>
                 </li>
                 <li class="nav-item">
                     <a href="/guestbook.html" class="nav-link">Guestbook</a>
@@ -103,8 +100,7 @@
             <div class="copy">
                 <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
                 </div>
-                <div class="bumper">
-                </div>
+                <div class="bumper"></div>
         </div>
     </div>
     </div>
