--- a/listen.html
+++ b/listen.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="listen.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,10 +23,7 @@
                     <a href="/listen.html" class="nav-link">Listen</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/worldwide.html" class="nav-link">Sleezy's Worldwide</a>
-                </li>
-                <li class="nav-item">
-                    <a href="guests.html" class="nav-link">Guests</a>
+                    <a href="/worldwide.html" class="nav-link">World of Sleezy</a>
                 </li>
                 <li class="nav-item">
                     <a href="/guestbook.html" class="nav-link">Guestbook</a>
@@ -44,13 +42,76 @@
             </div>
         </nav>
     </header>
-    <div class="body2">
-        <div class="heroContainer">
-            <div class="hero">
-                <img src="erictest.jpg" alt="">
-                <div class="title">The Vibing With Sleezy Podcast</div>
-            </div>
+    <div class="mediaContainer">
+        <ul id="episodes">
+            <li>
+              <button data-spotify-id="spotify:episode:698meYf0NBDzQQuweD4Euc">
+                Sleezy Vibes With Sean Patrick O'Brien
+              </button>
+            </li>
+            <li>
+              <button data-spotify-id="spotify:episode:2UGrlKxwb7wbD1MWiypXso">
+                Sleezy Vibes With Christeen Hernandez
+              </button>
+            </li>
+            <li>
+              <button data-spotify-id="spotify:episode:1R4OhUyoQ2TSblKGj86jDk?si=839c63bc71c74d9b">
+                Official World Cup Part 1
+              </button>
+            </li>
+            <li>
+                <button data-spotify-id="spotify:episode:5kbp7YMluwCoC1wz64chCy?si=c30741d93bd64a39">
+                  Official World Cup Part 2
+                </button>
+              </li>
+              <li>
+              <button data-spotify-id="spotify:episode:10tt2L4Yh59dsbBL3qOooO?si=9cbfcfa2435f463e&nd=1">
+                Antonio Pantoja Part 1
+              </button>
+            </li>
+            <li>
+              <button data-spotify-id="spotify:episode:3EIFJtF5RU9gjo1XztOKZK?si=108939b2ae6d4353">
+                Antonio Pantoja Part 2
+              </button>
+            </li>
+            <li>
+              <button data-spotify-id="spotify:episode:1R4OhUyoQ2TSblKGj86jDk?si=839c63bc71c74d9b">
+                Official World Cup Part 1
+              </button>
+            </li>
+            <li>
+                <button data-spotify-id="spotify:episode:5kbp7YMluwCoC1wz64chCy?si=c30741d93bd64a39">
+                  Official World Cup Part 2
+                </button>
+              </li>
+              <li>
+              <button data-spotify-id="spotify:episode:10tt2L4Yh59dsbBL3qOooO?si=9cbfcfa2435f463e&nd=1">
+                Antonio Pantoja Part 1
+              </button>
+            </li>
+            <li>
+              <button data-spotify-id="spotify:episode:3EIFJtF5RU9gjo1XztOKZK?si=108939b2ae6d4353">
+                Antonio Pantoja Part 2
+              </button>
+            </li>
+            <li>
+              <button data-spotify-id="spotify:episode:1R4OhUyoQ2TSblKGj86jDk?si=839c63bc71c74d9b">
+                Official World Cup Part 1
+              </button>
+            </li>
+            <li>
+                <button data-spotify-id="spotify:episode:5kbp7YMluwCoC1wz64chCy?si=c30741d93bd64a39">
+                  Official World Cup Part 2
+                </button>
+              </li>
+          </ul>
+        <div id="media-player">
+            <div id="embed-iframe"></div>
         </div>
+    </div>
+    <div class="moreContainer">
+        <div class="more">
+    <script src="https://open.spotify.com/embed-podcast/iframe-api/v1" async></script>
     <script src="scripts.js"></script>
 </body>
 </html>
