--- a/worldwide.html
+++ b/worldwide.html
@@ -22,10 +22,7 @@
                     <a href="/listen.html" class="nav-link">Listen</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/worldwide.html" class="nav-link">Sleezy's Worldwide</a>
-                </li>
-                <li class="nav-item">
-                    <a href="guests.html" class="nav-link">Guests</a>
+                    <a href="/worldwide.html" class="nav-link">World of Sleezy</a>
                 </li>
                 <li class="nav-item">
                     <a href="/guestbook.html" class="nav-link">Guestbook</a>
