--- a/index.html
+++ b/index.html
@@ -60,35 +60,13 @@
                     </div>
                 </div>
                 <div class="mediaContainer">
-                    <ul id="episodes">
-                        <li>
-                          <button data-spotify-id="spotify:episode:10tt2L4Yh59dsbBL3qOooO?si=9cbfcfa2435f463e&nd=1">
-                            Antonio Pantoja Part 1
-                          </button>
-                        </li>
-                        <li>
-                          <button data-spotify-id="spotify:episode:3EIFJtF5RU9gjo1XztOKZK?si=108939b2ae6d4353">
-                            Antonio Pantoja Part 2
-                          </button>
-                        </li>
-                        <li>
-                          <button data-spotify-id="spotify:episode:1R4OhUyoQ2TSblKGj86jDk?si=839c63bc71c74d9b">
-                            Official World Cup Part 1
-                          </button>
-                        </li>
-                        <li>
-                            <button data-spotify-id="spotify:episode:5kbp7YMluwCoC1wz64chCy?si=c30741d93bd64a39">
-                              Official World Cup Part 2
-                            </button>
-                          </li>
-                      </ul>
                     <div id="media-player">
                         <div id="embed-iframe"></div>
                     </div>
                 </div>
                 <div class="moreContainer">
                     <div class="more">
-                        More episodes can be found on <a href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1" target="_blank">Spotify</a> or <a href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924" target="_blank">Apple Podcasts</a> !
+                        More episodes can be found <a href="/listen.html">HERE</a> or on <a href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1" target="_blank">Spotify</a> or <a href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924" target="_blank">Apple Podcasts</a> !
                     </div>
                 </div>
               <div class="links">
