--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
 </div>
 <div class="formContainer">
     <div class="want">Want to be on the show?</div>
-    <form action="https://formsubmit.co/ajthms@yahoo.com" method="POST">
+    <form action="https://formsubmit.co/vibingwithsleezy@gmail.com" method="POST">
         <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="text" name="message" placeholder="What makes you unique?" required>
