--- a/listen.html
+++ b/listen.html
@@ -32,6 +32,9 @@
                     <a href="/donate.html" class="nav-link">Merch/Donate</a>
                 </li>
                 <li class="nav-item">
+                    <a href="/partners.html" class="nav-link">Partners</a>
+                </li>
+                <li class="nav-item">
                     <a href="/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
@@ -366,6 +369,14 @@
                 <div id="episode-description"></div>
             </div>
         </div>
+        <div class="moreContainer">
+            <div class="more">
+                You can also listen on <a href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1" target="_blank">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924" target="_blank">Apple Podcasts</a> or anywhere that you can get your favorite podcasts!
+            </div>
+        </div>
+        <div class="copy">
+            <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+            </div>
     </div>
     </div>
     <script src="https://open.spotify.com/embed-podcast/iframe-api/v1" async></script>
