--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <a href="/donate.html" class="nav-link">Merch/Donate</a>
                 </li>
                 <li class="nav-item">
+                    <a href="/partners.html" class="nav-link">Partners</a>
+                </li>
+                <li class="nav-item">
                     <a href="/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
