--- a/worldwide.html
+++ b/worldwide.html
@@ -31,6 +31,9 @@
                     <a href="/donate.html" class="nav-link">Merch/Donate</a>
                 </li>
                 <li class="nav-item">
+                    <a href="/partners.html" class="nav-link">Partners</a>
+                </li>
+                <li class="nav-item">
                     <a href="/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
@@ -41,12 +44,11 @@
             </div>
         </nav>
     </header>
-    <div class="body2">
-        <div class="heroContainer">
-            <div class="hero">
-                <img src="erictest.jpg" alt="">
-                <div class="title">The Vibing With Sleezy Podcast</div>
-            </div>
+    <div class="comingContainer">
+        <div class="coming">COMING SOON...</div>
+    </div>
+    <div class="copy">
+        <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
         </div>
     <script src="scripts.js"></script>
 </body>
