--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
         <input type="text" name="message" placeholder="What makes you unique?" required>
         <input type="hidden" name="_subject" value="New Vibing With Sleezy submission!">
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://VibingWithSleezy.netlify.app/thanks.html">
+        <input type="hidden" name="_next" value="https://VibingWithSleezy.com/thanks.html">
         <button type="submit">Send</button>
    </form>
     </div>
