--- a/thanks.html
+++ b/thanks.html
@@ -46,45 +46,46 @@
             </div>
         </nav>
     </div>
-   
+    <div class="body4">
         <img class="ericStand" src="ericstand.png">
-        <img class="ericStand2" src="ericstand.png">
         <div class="body3">
-                <div class="glass">
-                    <div class="about">
-                <div class="Eric">You can contact me on the following platforms:</div>
-                <div class="links2Container">
-                <div class="links2">
-                <ul>
-                <li>
-                    <a href="https://www.instagram.com/vibingwithsleezythepodcast" target="_blank"> 
-                        <img class="socials" src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram logo" width="20" height="20">Instagram
-                    </a>
-                    <span>@vibingwithsleezythepodcast</span>
-                </li>
-                <li><a href="https://facebook.com/vibingwithsleezy" target="_blank"> 
-                    <img class="socials" src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook Logo" width="20" height="20">Facebook
-                </a>
-                <span>Vibing With Sleezy</span></li>
-                <div class="email">
-                <li>
-                    <a href="mailto:vibingwithsleezy@gmail.com">Email
-                    </a>
-                    <span>VibingWithSleezy@gmail.com</span>
-                </li>
+            <div class="glass">
+                <div class="about">
+                    <div class="Eric">You can contact me on the following platforms:</div>
+                    <div class="links2Container">
+                        <div class="links2">
+                            <ul>
+                                <li>
+                                    <a href="https://www.instagram.com/vibingwithsleezythepodcast" target="_blank"> 
+                                        <img class="socials" src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram logo" width="20" height="20">Instagram
+                                    </a>
+                                    <span>@vibingwithsleezythepodcast</span>
+                                </li>
+                                <li><a href="https://facebook.com/vibingwithsleezy" target="_blank"> 
+                                    <img class="socials" src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook Logo" width="20" height="20">Facebook
+                                </a>
+                                <span>Vibing With Sleezy</span></li>
+                                <div class="email">
+                                    <li>
+                                        <a href="mailto:vibingwithsleezy@gmail.com">Email
+                                        </a>
+                                        <span>VibingWithSleezy@gmail.com</span>
+                                    </li>
+                                </div>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-                </ul>
+            <div class="thanks">Thank You For Your Submission!</div>
+        </div>
+        <img class="ericStand2" src="ericstand.png">
+    </div>
+    <div class="copy">
+        <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+    </div>
     </div>
 </div>
-</div>
-</div>
-<div class="thanks">Thank You For Your Submission!</div>
-    </div>
-    </div>
-<div class="copy">
-    <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
-    </div>
-    </div>
     <script src="https://smtpjs.com/v3/smtp.js"></script>          
     <script src="scripts.js"></script>
 </body>
