--- a/contact.html
+++ b/contact.html
@@ -80,13 +80,13 @@
 </div>
 <div class="formContainer">
     <div class="want">Want to be on the show?</div>
-    <form action="https://formsubmit.co/vibingwithsleezy@gmail.com" method="POST">
+    <form action="https://formsubmit.co/ajthms@yahoo.com" method="POST">
         <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="text" name="message" placeholder="What makes you unique?" required>
         <input type="hidden" name="_subject" value="New Vibing With Sleezy submission!">
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="vibingwithsleezy.com/thanks.html">
+        <input type="hidden" name="_next" value="https://vibingwithsleezy.com/thanks.html">
         <button type="submit">Send</button>
    </form>
     </div>
