--- a/thanks.html
+++ b/thanks.html
@@ -1,92 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="contact.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vibing With Sleezy</title>
-    
-</head>
-<body> 
-    <div class="container">
-    <div class="header">
-        <nav class="navbar">
-            <a href="/index.html" class="nav-branding">SLEEZY E</a>
 
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="/listen.html" class="nav-link">Listen</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/worldwide.html" class="nav-link">World of Sleezy</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/guestbook.html" class="nav-link">Guestbook</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/donate.html" class="nav-link">Merch/Donate</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/partners.html" class="nav-link">Partners</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/contact.html" class="nav-link">Contact</a>
-                </li>
-            </ul>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-        </nav>
-    </div>
-    <div class="body4">
-        <img class="ericStand" src="ericstand.png">
-        <div class="body3">
-            <div class="glass">
-                <div class="about">
-                    <div class="Eric">You can contact me on the following platforms:</div>
-                    <div class="links2Container">
-                        <div class="links2">
-                            <ul>
-                                <li>
-                                    <a href="https://www.instagram.com/vibingwithsleezythepodcast" target="_blank"> 
-                                        <img class="socials" src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram logo" width="20" height="20">Instagram
-                                    </a>
-                                    <span>@vibingwithsleezythepodcast</span>
-                                </li>
-                                <li><a href="https://facebook.com/vibingwithsleezy" target="_blank"> 
-                                    <img class="socials" src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook Logo" width="20" height="20">Facebook
-                                </a>
-                                <span>Vibing With Sleezy</span></li>
-                                <div class="email">
-                                    <li>
-                                        <a href="mailto:vibingwithsleezy@gmail.com">Email
-                                        </a>
-                                        <span>VibingWithSleezy@gmail.com</span>
-                                    </li>
-                                </div>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="thanks">Thank You For Your Submission!</div>
-            <div class="copy">
-                <div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
-            </div>
-        </div>
-        <img class="ericStand2" src="ericstand.png">
-    </div>
-</div>
-</div>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>          
-    <script src="scripts.js"></script>
+<head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,700&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="contact.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Vibing With Sleezy</title>
+
+</head>
+
+<body>
+	<div class="container">
+		<div class="header">
+			<nav class="navbar">
+				<a href="/index.html" class="nav-branding">SLEEZY E</a>
+
+				<ul class="nav-menu">
+					<li class="nav-item">
+						<a href="/listen.html" class="nav-link">Listen</a>
+					</li>
+					<li class="nav-item">
+						<a href="/worldwide.html" class="nav-link">World of Sleezy</a>
+					</li>
+					<li class="nav-item">
+						<a href="/guestbook.html" class="nav-link">Guestbook</a>
+					</li>
+					<li class="nav-item">
+						<a href="/donate.html" class="nav-link">Merch/Donate</a>
+					</li>
+					<li class="nav-item">
+						<a href="/partners.html" class="nav-link">Partners</a>
+					</li>
+					<li class="nav-item">
+						<a href="/contact.html" class="nav-link">Contact</a>
+					</li>
+				</ul>
+				<div class="hamburger">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</div>
+			</nav>
+		</div>
+		<div class="body4">
+			<img class="ericStand" src="ericstand.png">
+			<div class="body3">
+				<div class="glass">
+					<div class="about">
+						<div class="Eric">You can contact me on the following platforms:</div>
+						<div class="links2Container">
+							<div class="links2">
+								<ul>
+									<li>
+										<a href="https://www.instagram.com/vibingwithsleezythepodcast" target="_blank">
+											<img class="socials" src="https://cdn-icons-png.flaticon.com/512/174/174855.png"
+												alt="Instagram logo" width="20" height="20">Instagram
+										</a>
+										<span>@vibingwithsleezythepodcast</span>
+									</li>
+									<li><a href="https://facebook.com/vibingwithsleezy" target="_blank">
+											<img class="socials" src="https://cdn-icons-png.flaticon.com/512/124/124010.png"
+												alt="Facebook Logo" width="20" height="20">Facebook
+										</a>
+										<span>Vibing With Sleezy</span>
+									</li>
+									<div class="email">
+										<li>
+											<a href="mailto:vibingwithsleezy@gmail.com">Email
+											</a>
+											<span>VibingWithSleezy@gmail.com</span>
+										</li>
+									</div>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="thanks">Thank You For Your Submission!</div>
+				<div class="copy">
+					<div class="copyright">Copyright &copy; 2023 Vibing With Sleezy</div>
+				</div>
+			</div>
+			<img class="ericStand2" src="ericstand.png">
+		</div>
+	</div>
+	</div>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
+	<script src="scripts.js"></script>
 </body>
+
 </html>
