--- a/listen.html
+++ b/listen.html
@@ -52,8 +52,15 @@
 		<div class="mediaContainer">
 			<div class="heroContainer">
 				<div class="hero"><img src="Logo.png" alt="Vibing With Sleezy Logo"></div>
-			</div>
-			<div class="episodeContainer">
+
+				<div class="episodeContainer">
+					<div id="some-container">
+						<div id="embed-iframe"></div>
+					</div>
+					<div class="glass"></div>
+					<div id="episode-description"></div>
+				</div>
+				<!-- <div class="episodeContainer">
 				<ul id="episodes">
 					<li>
 						<button data-spotify-id="spotify:episode:698meYf0NBDzQQuweD4Euc"
@@ -435,14 +442,15 @@
 					<div class="glass">
 						<div id="episode-description"></div>
 					</div>
-				</div>
+				</div> -->
 				<div class="moreContainer">
 					<div class="more">
 						You can also listen on <a
 							href="https://open.spotify.com/show/2x7rEWkndHHajvKL4iAzgH?go=1&sp_cid=12a9eb1ae9cacbde21d089e960621348&utm_source=embed_player_p&utm_medium=desktop&nd=1"
 							target="_blank">Spotify</a>, <a
 							href="https://podcasts.apple.com/us/podcast/vibing-with-sleezy-the-podcast/id1557112924"
-							target="_blank">Apple Podcasts</a> or anywhere that you can get your favorite podcasts!
+							target="_blank">Apple
+							Podcasts</a> or anywhere that you can get your favorite podcasts!
 					</div>
 				</div>
 				<div class="copy">
